Update getFirst to get in recursive chunker tests